[package]
name = "rptemp"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

ssd1306 = "0.8.4"
seeeduino-xiao-rp2040 = "0.4.0"
