[package]
name = "envmat"
version = "0.1.0"
edition = "2021"

[dependencies]
# cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
embedded-graphics = { version = "0.8", features = ["defmt"] }

rp2040-hal = { version = "0.10", features = ["defmt", "rt", "critical-section-impl", "rom-func-cache"] }
rp2040-boot2 = "0.3"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

display-interface = "0.4"
display-interface-spi = "0.4"
ssd1306 = "0.8"

rtic = { version = "2.1", features = ["thumbv6-backend"] }
rtic-time = "1.3.0"
fugit = "0.3"
